加入各週任務頁面, 並要求各大組在 w4 上課時段進行網頁式簡報

--- a/content/Assignments.html
+++ b/content/Assignments.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Assignments.html'>Assignments</a></li></ul><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='run.html'>run</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li><a href='NX1980.html'>NX1980</a><li><a href='Onshape.html'>Onshape</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='run.html'>run</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,7 +139,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Pull requests << <a href='Pull requests.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace<br /><h1>Assignments</h1>
+    <div id="tipue_search_content">Pull requests << <a href='Pull requests.html'>Previous</a> <a href='各週任務.html'>Next</a> >> 各週任務<br /><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
@@ -169,7 +169,7 @@ img.add_border {
 <li>各學員在每週會議後, 個人所負責完成的內容或簡報必須先放到個人的 cd2022 倉儲後, 再透過小組協同倉儲練習如何解決組員間提交內容的衝突後, 再整合至各大組的協同倉儲.</li>
 <li>接著要從 ethercalc 取下 2a 學員的 github 帳號與大組分組資料, 並存入 studlist 倉儲 (能不能用程式協助?)</li>
 </ol>
-<p>2a w2 assignments:</p>
+<p id="2aw2">2a w2 assignments:</p>
 <p>1. 在個人帳號下, 使用<a href="https://github.com/mdecourse/cmsimde/tree/9efabe7ab2fc4952f9255cf30b3856695514b3ee">最新版的 cmsimde</a> 建立 cd2022:</p>
 <p style="padding-left: 30px;">以子模組的方式建立倉儲:</p>
 <p style="padding-left: 60px;">git submodule add https://github.com/mdecourse/cmsimde.git cmsimde</p>
@@ -181,7 +181,7 @@ img.add_border {
 <p>建立個人 cd2022 與 cd2022bg1 (以 2b 第一大組為例) 時, 可以用 import <a href="https://github.com/mdecourse/cmsimde_site">cmsimde_site</a> 倉儲 (但 history 將會是 mdecourse 而非學員), 或 git submodule add 或直接將 cmsimde 下載 <a href="https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip">https://github.com/mdecourse/cmsimde/archive/refs/heads/master.zip</a> 後解開為倉儲下的 cmsimde 目錄, 之後再將 up_dir 內容複製到倉儲根目錄. 當評分檢查時, 各大組需繳交全班各學員是否達成任務要求.</p>
 <p>cd2022 w2 任務 1:</p>
 <p style="padding-left: 30px;">請各組利用一個小時建立一個欄位以 tab 隔開的 txt 檔案, 欄位標題分別為學號, 個人倉儲, 大分組倉儲排列, 按照各班學員學號順序 (<a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0752&amp;column=True">2a 修課學員</a>, <a href="https://nfulist.herokuapp.com/?semester=1102&amp;courseno=0764&amp;column=True">2b 修課學員</a>). 完成後請各大組將結果回應至 <a href="https://github.com/mdecourse/cd2022/discussions/16">2b w2 討論區</a>.</p>
-<p></p><br />Pull requests << <a href='Pull requests.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
+<br />Pull requests << <a href='Pull requests.html'>Previous</a> <a href='各週任務.html'>Next</a> >> 各週任務</div>
         
     <!-- footer -->
       <div class="container">
