縮排 w3 任務, 並且重新配置 NX1980 頁面中的 learnnx id

--- a/config/content.htm
+++ b/config/content.htm
@@ -152,11 +152,11 @@ var winkVideoData = {
 <p style="padding-left: 60px;">請學員以全球資訊網頁的 URL 讀取各班資料後, 是否能夠以永續便捷的方式取得已經選好組別的<span style="background-color: #ffff99;">學員學號</span>、學員<span style="background-color: #ffff99;">個人倉儲連結</span>、學員<span style="background-color: #ffff99;">個人網站</span>、各組位於學員帳號下的<span style="background-color: #ffff99;">大組倉儲</span>以及各學員帳號下各大組的<span style="background-color: #ffff99;">協同網站</span>.</p>
 <p style="padding-left: 60px;">而針對尚未填入 github 帳號的學員, 以其學號作為其 github 帳號. 針對尚未列出分組序號的學員, 則委由隨機方式編入尚不足 8 名學員的組別, 若各組已經都補滿 8 名學員, 仍餘有尚未分組的學員時, 則採隨機方式從各班第一組依序補入各組後, 分別在個人及大分組的 w2 標題頁面中, 列出各大組與全班的上述要求資料.</p>
 <h4>w3 任務:</h4>
-<h4>問題緣起:</h4>
-<p style="padding-left: 30px;">w2 完成分組後, 各組即進入利用 NX1980 繪製 uArm 機械手臂的協同設計階段, 其中包括手臂兩側的正齒輪減速機設計, 以及各連桿與組立所需要的其他組件設計等 (完成圖如 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm 組立圖</a>).</p>
-<p style="padding-left: 30px;">uArm 機械手臂的初步設計目的, 是完成 NX1980 組力圖後, 能轉入 Coppeliasim 環境中進行機電系統組合模擬, 讓操作者透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">Custom UIs 介面</a>操控四個自由度的 uArm 步進伺服馬達.</p>
-<h4>指定任務:</h4>
-<p style="padding-left: 30px;"><a href="https://mde.tw/cd2022_guide/content/NX1980.html#learnnx">這裡</a>有 38 個比較接近 NX1980 版本功能的教學影片 (<a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">連結</a>), 請以每一學員分配 5 個影片的原則, 由各學員在 w3 標題頁面中, 根據影片中的教學內容, 以 Wink 影片互相對照的方式採 NX1980 執行操作進行整理, 完成後請將所負責的 Wink 教學影片嵌入個人與大分組的 w3 標題頁面中.</p>
+<h4 style="padding-left: 30px;">問題緣起:</h4>
+<p style="padding-left: 60px;">w2 完成分組後, 各組即進入利用 NX1980 繪製 uArm 機械手臂的協同設計階段, 其中包括手臂兩側的正齒輪減速機設計, 以及各連桿與組立所需要的其他組件設計等 (完成圖如 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm 組立圖</a>).</p>
+<p style="padding-left: 60px;">uArm 機械手臂的初步設計目的, 是完成 NX1980 組力圖後, 能轉入 Coppeliasim 環境中進行機電系統組合模擬, 讓操作者透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">Custom UIs 介面</a>操控四個自由度的 uArm 步進伺服馬達.</p>
+<h4 style="padding-left: 30px;">指定任務:</h4>
+<p style="padding-left: 60px;"><a href="https://mde.tw/cd2022_guide/content/NX1980.html#learnnx">這裡</a>有 38 個比較接近 NX1980 版本功能的教學影片 (<a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">連結</a>), 請以每一學員分配 5 個影片的原則, 由各學員在 w3 標題頁面中, 根據影片中的教學內容, 以 Wink 影片互相對照的方式採 NX1980 執行操作進行整理, 完成後請將所負責的 Wink 教學影片嵌入個人與大分組的 w3 標題頁面中.</p>
 <p><span style="background-color: #ffff99;">w4 各班上課時段前</span>, 請各小組與大組成員分別開會討論後, 採協同設計流程執行上述任務, 並準備在 w4 上課時段中直接利用網頁簡報呈現各大組的執行流程與結果.</p><h1>Solvespace</h1>
 <p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
 <p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX1980</h1>
@@ -173,7 +173,8 @@ var winkVideoData = {
 <p style="padding-left: 60px;">可攜 NX1980 是如何建立的?</p>
 <p style="padding-left: 60px;">如何讓 NX1980 認證伺服器能夠 IPv6 相容?</p>
 <p style="padding-left: 60px;">如何安裝 NX1980 認證伺服器?</p>
-<p id="learnnx" style="padding-left: 60px;">如何學習利用 NX1980 進行 3D 零組件設計繪圖?</p>
+<p id="learnnx"></p>
+<p style="padding-left: 60px;">如何學習利用 NX1980 進行 3D 零組件設計繪圖?</p>
 <p style="padding-left: 90px;"><a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">NX1855-1919 零組件設計繪圖</a>教學影片</p>
 <p style="padding-left: 120px;">此一系列教學影片共有 38 個影片檔, 請各大組學員分別認領五個教學影片後, 以 Wink 製作教學影片後, 先將影片放入各自的 cd2022 網站中的 NX1980 H1 頁面中, 然後再整合至各小組與大組的協同網站中.</p>
 <p style="padding-left: 120px;">有關電腦輔助設計室 IPv6 網路設定流程, 可以利用手機參考<a href="https://mde.tw/wcm2022_guide/content/IPv6%20setup.html">設定教學</a>後, 利用隨身碟中的<a href="https://github.com/mdecourse/wcm2022/discussions/2">批次檔案</a>進行設定.</p>
