修正組立說明中的錯字

--- a/content/各週任務.html
+++ b/content/各週任務.html
@@ -151,7 +151,7 @@ img.add_border {
 <h4>w3 任務:</h4>
 <h4 style="padding-left: 30px;">問題緣起:</h4>
 <p style="padding-left: 60px;">w2 完成分組後, 各組即進入利用 NX1980 繪製 uArm 機械手臂的協同設計階段, 其中包括手臂兩側的正齒輪減速機設計, 以及各連桿與組立所需要的其他組件設計等 (完成圖如 <a href="https://cad.onshape.com/documents/21d631bfd9ab509e3a2079c0/w/832791ed26ad65d49a0711b4/e/6957bf222554da36040535be">Onshape 中的 uArm 組立圖</a>).</p>
-<p style="padding-left: 60px;">uArm 機械手臂的初步設計目的, 是完成 NX1980 組力圖後, 能轉入 Coppeliasim 環境中進行機電系統組合模擬, 讓操作者透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">Custom UIs 介面</a>操控四個自由度的 uArm 步進伺服馬達.</p>
+<p style="padding-left: 60px;">uArm 機械手臂的初步設計目的, 是完成 NX1980 組立圖後, 能轉入 Coppeliasim 環境中進行機電系統組合模擬, 讓操作者透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/customUIPlugin.htm">Custom UIs 介面</a>操控四個自由度的 uArm 步進伺服馬達.</p>
 <h4 style="padding-left: 30px;">指定任務:</h4>
 <p style="padding-left: 60px;"><a href="https://mde.tw/cd2022_guide/content/NX1980.html#learnnx">這裡</a>有 38 個比較接近 NX1980 版本功能的教學影片 (<a href="https://www.youtube.com/watch?v=GUaa97tALxE&amp;list=PLzEsJue49U_EMMv0eBo8MNJjJOq_WHCrl">連結</a>), 請以每一學員分配 5 個影片的原則, 由各學員在 w3 標題頁面中, 根據影片中的教學內容, 以 Wink 影片互相對照的方式採 NX1980 執行操作進行整理, 完成後請將所負責的 Wink 教學影片嵌入個人與大分組的 w3 標題頁面中.</p>
 <p><span style="background-color: #ffff99;">w4 各班上課時段前</span>, 請各小組與大組成員分別開會討論後, 採協同設計流程執行上述任務, 並準備在 w4 上課時段中直接利用網頁簡報呈現各大組的執行流程與結果.</p><br />Assignments << <a href='Assignments.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
