--- a/content/Grouping.html
+++ b/content/Grouping.html
@@ -150,7 +150,8 @@ img.add_border {
 <p>以下 Brython 程式可讀取各大組的學員分組資料後, 直接在網頁中列出各學員 cd2022 倉儲與網頁連結、各小組協同倉儲與網頁連結、以及各大組協同倉儲與網頁連結.</p>
 <p>請注意: 各組學員 github 帳號下除建有個人 cd2022 倉儲外, 還必須 fork 大組倉儲 (例如: 甲班第一大組的倉儲名稱將為: cd2022ag1) 並在各大組進行網際協同分組簡報前, 與所屬大組的分組協同倉儲內容保持同步.</p>
 <p><a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a> (<a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">run</a>)</p>
-<br />IPv6 << <a href='IPv6.html'>Previous</a> <a href='Pull requests.html'>Next</a> >> Pull requests</div>
+<p><a href="./../downloads/w4_2a_get_grp1_num_of_members.txt">w4_2a_get_grp1_num_of_members.txt</a></p>
+<p><a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/f8c034b69ea88c2fc3c716ca49a9cf8aec1e6b25/w4_2a_grp">w4 2a 分組結果</a></p><br />IPv6 << <a href='IPv6.html'>Previous</a> <a href='Pull requests.html'>Next</a> >> Pull requests</div>
         
     <!-- footer -->
       <div class="container">
