--- a/config/content.htm
+++ b/config/content.htm
@@ -68,7 +68,8 @@
 <p>以下 Brython 程式可讀取各大組的學員分組資料後, 直接在網頁中列出各學員 cd2022 倉儲與網頁連結、各小組協同倉儲與網頁連結、以及各大組協同倉儲與網頁連結.</p>
 <p>請注意: 各組學員 github 帳號下除建有個人 cd2022 倉儲外, 還必須 fork 大組倉儲 (例如: 甲班第一大組的倉儲名稱將為: cd2022ag1) 並在各大組進行網際協同分組簡報前, 與所屬大組的分組協同倉儲內容保持同步.</p>
 <p><a href="https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">grp_2022.py</a> (<a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/c7043ac81005b069c58080c1222fe30048d588cb/grp_2022.py">run</a>)</p>
-<h3>Pull requests</h3>
+<p><a href="/downloads/w4_2a_get_grp1_num_of_members.txt">w4_2a_get_grp1_num_of_members.txt</a></p>
+<p><a href="https://mde.tw/cd2022_guide/content/run.html?src=https://gist.githubusercontent.com/mdecourse/05930b1775b77293523b59b1bbb43e57/raw/f8c034b69ea88c2fc3c716ca49a9cf8aec1e6b25/w4_2a_grp">w4 2a 分組結果</a></p><h3>Pull requests</h3>
 <p><a href="https://mde.tw/cd2022">cd2022</a> (cd 為 collaborative design 縮寫) 協同產品設計實習課程的修課學員名單、Github 帳號與大組分組組別資料, 以 Tab (即 \t) 隔開 (<a href="https://github.com/mdecourse/studlist/blob/main/2022spring/2a.txt">2a.txt</a> 與 <a href="https://github.com/mdecourse/studlist/blob/main/2022spring/2b.txt">2b.txt</a>), 採用倉儲儲存, 再透過 Github Pages, 能讓任何成員從全球資訊網介面:</p>
 <p style="padding-left: 30px;"><a href="http://mde.tw/studlist/2022spring/2a.txt">http://mde.tw/studlist/2022spring/2a.txt</a> </p>
 <p style="padding-left: 30px;"><a href="http://mde.tw/studlist/2022spring/2b.txt">http://mde.tw/studlist/2022spring/2b.txt</a> </p>
