--- a/config/content.htm
+++ b/config/content.htm
@@ -282,9 +282,8 @@ http {
 <h2>Threejs</h2>
 <p><a href="https://threejs.org/">https://threejs.org/</a></p>
 <p><iframe frameborder="0" height="300" src="/downloads/threejs_ex/index.html" width="300"></iframe></p>
-<p><a href="https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm">https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm</a></p>
-<p></p>
-<p></p><h1>run</h1>
+<p><iframe frameborder="0" height="300" src="/downloads/threejs_ex/ex1/asm.html" width="300"></iframe></p>
+<p><a href="https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm">https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm</a></p><h1>run</h1>
 <script src="/static/brython.js">
 </script>
 <script src="/static/brython_stdlib.js"></script>
