--- a/downloads/threejs_ex/ex1/asm.html
+++ b/downloads/threejs_ex/ex1/asm.html
@@ -10,6 +10,6 @@
         <script src="https://mde.tw/cd2022_guide/downloads/threejs_ex/OrbitControls.js"></script>
         <script src='https://mde.tw/cd2022_guide/downloads/threejs_ex/TrackballControls.js'></script>
         <script src='https://mde.tw/cd2022_guide/downloads/threejs_ex/OBJLoader.js'></script>
-        <script src="/downloads/threejs_ex/ex1/asm.js"></script>
+        <script src="https://mde.tw/cd2022_guide/downloads/threejs_ex/ex1/asm.js"></script>
         </body>
 </html>
